--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.6",
     "@types/sequelize": "^4.28.8",
     "@types/yup": "^0.26.32",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
